# python-project-template

./: .gitignore  pyproject.toml  rename_project.sh
wheels/: download.sh
