[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["author"]
readme = "README.md"
packages = [
    {include = "python_project_template", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pyproject-flake8 = "5.0.4"
flake8-isort = "^5.0.0"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.0"
flake8-eradicate = "^1.4.0"
flake8-docstrings = "^1.6.0"
flake8-unused-arguments = "^0.0.11"
flake8-pytest-style = "^1.6.0"
pep8-naming = "^0.13.2"
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
